--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+main {
+  font: 100% "Montserrat", sans-serif;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
