generating jot components

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,10 @@ main {
   justify-content: center;
 }
 
+.jot-listitem{
+  list-style: none;
+}
+
 .jot {
   margin-top: 4px;
   margin-right: 4px;
